--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "Dubins3D"
 uuid = "b218df9c-8706-40c8-80f9-13e28a209add"
 authors = ["Petr Vana <vanapet1@fel.cvut.cz>"]
 version = "0.1.0"
+
+[compat]
+julia = "^1"t
