--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,9 @@ uuid = "b218df9c-8706-40c8-80f9-13e28a209add"
 authors = ["Petr Vana <vanapet1@fel.cvut.cz>"]
 version = "0.1.0"
 
+[deps]
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
 [compat]
 julia = "^1"
