--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ os:
 
 julia:
   - 1.0
+  - 1.5
   - nightly
 
-#matrix:
-#  allow_failures:
-#    - julia: 1.3
-#    - julia: nightly
+matrix:
+  allow_failures:
+    - julia: nightly
 
 notifications:
   email: false
